--- a/package.json
+++ b/package.json
@@ -9,10 +9,9 @@
   "scripts": {
     "pm2": "./node_modules/.bin/pm2",
     "jest": "./node_modules/.bin/jest",
-    "start": "./scripts/prepare-for-test.sh",
+    "start": "node backend/src/api/server.js",
     "stop": "(pm2 stop all && pm2 delete all) | grep 'PM2'",
     "dev": "./scripts/prepare-for-dev.sh",
-    "dev:prestart": "./scripts/prestart-dev.sh",
     "db:reset": "./scripts/reset-db-dev.sh",
     "db:reset:debug": "./scripts/reset-db-dev-debug.sh",
     "pretest": "npm start",
