--- a/back-end/package.json
+++ b/back-end/package.json
@@ -2,7 +2,6 @@
   "name": "delivery-app-back-end",
   "version": "0.1.0",
   "description": "Back-end do projeto App de Delivery",
-  "main": "./src/api/server.js",
   "engines": {
     "node": ">=16.0.0"
   },
@@ -10,7 +9,7 @@
   "private": true,
   "scripts": {
     "db:reset": "npx sequelize-cli db:drop && npx sequelize-cli db:create && npx sequelize-cli db:migrate && npx sequelize-cli db:seed:all",
-    "start": "npm run db:reset && node .",
+    "start": "npm run db:reset && node src/api/server.js",
     "dev": "nodemon .",
     "test": "mocha src/tests/**/*$NAME*.test.js --exit",
     "test:coverage": "nyc --all npm run test",
