--- a/back-end/package.json
+++ b/back-end/package.json
@@ -30,6 +30,7 @@
     "multer": "1.4.4",
     "mysql2": "2.3.3",
     "sequelize": "6.17.0",
+    "sequelize-cli": "^6.5.2",
     "socket.io": "4.4.1"
   },
   "devDependencies": {
@@ -39,7 +40,6 @@
     "mocha": "9.2.2",
     "nodemon": "2.0.15",
     "nyc": "15.1.0",
-    "sequelize-cli": "6.4.1",
     "sinon": "13.0.1"
   }
 }
