build(docker): create backend image

--- a/back-end/.env.example
+++ b/back-end/.env.example
@@ -1,8 +1,7 @@
-NODE_ENV=
-API_PORT=
-MYSQL_HOST=
-MYSQL_PORT=
-MYSQL_USER=
-MYSQL_PASSWORD=
-MYSQL_DB_NAME=
-JWT_SECRET=
+NODE_ENV=production
+API_PORT=3001
+MYSQL_HOST=db
+MYSQL_USER=root
+MYSQL_PASSWORD=docker
+MYSQL_DB_NAME=deliveryapp
+JWT_SECRET=minhasupersenha
