--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,16 @@
 version: '3.9'
 
 services:
+  backend:
+    container_name: delivery_app_api
+    build: ./back-end
+    ports:
+      - 3001:3001
+    volumes:
+      - ./back-end:/home/node/app
+      - /home/node/app/node_modules
+    depends_on:
+      - db
   db:
     image: mysql:8.0.32
     container_name: delivery_app_database
