--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,18 @@
 version: '3.9'
 
 services:
+  frontend:
+    container_name: delivery_app_frontend
+    build: ./front-end
+    ports:
+      - 3000:3000
+    volumes:
+      - ./front-end:/home/node/app
+      - /home/node/app/node_modules
+    depends_on:
+      - backend
+    stdin_open: true
+    tty: true
   backend:
     container_name: delivery_app_api
     build: ./back-end
