--- a/back-end/package.json
+++ b/back-end/package.json
@@ -23,9 +23,11 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "4.17.3",
+    "express-rate-limit": "^6.7.0",
     "express-rescue": "1.1.31",
+    "helmet": "^6.0.1",
     "joi": "^17.6.0",
-    "jsonwebtoken": "8.5.1",
+    "jsonwebtoken": "9.0.0",
     "md5": "2.3.0",
     "multer": "1.4.4",
     "mysql2": "2.3.3",
