test: refactor some tests assertions and mocks

--- a/back-end/package.json
+++ b/back-end/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "db:reset": "npx sequelize-cli db:drop && npx sequelize-cli db:create && npx sequelize-cli db:migrate && npx sequelize-cli db:seed:all",
     "start": "npm run db:reset && node src/api/server.js",
-    "dev": "nodemon .",
+    "dev": "nodemon src/api/server.js",
     "test": "mocha src/tests/**/*$NAME*.test.js --exit",
     "test:coverage": "nyc --all npm run test",
     "test:coverage:json": "nyc --all --reporter=json-summary npm run test",
@@ -19,6 +19,7 @@
   "dependencies": {
     "@hapi/boom": "9.1.4",
     "@types/express": "4.17.13",
+    "bcryptjs": "^2.4.3",
     "body-parser": "1.19.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
@@ -31,9 +32,10 @@
     "md5": "2.3.0",
     "multer": "1.4.4",
     "mysql2": "2.3.3",
-    "sequelize": "6.17.0",
+    "sequelize": "6.28.2",
     "sequelize-cli": "^6.5.2",
-    "socket.io": "4.4.1"
+    "socket.io": "4.4.1",
+    "swagger-ui-express": "^4.6.1"
   },
   "devDependencies": {
     "chai": "4.3.6",
