--- a/front-end/.eslintrc.json
+++ b/front-end/.eslintrc.json
@@ -4,6 +4,7 @@
   "rules": {
     "react/jsx-max-depth": "off",
     "react/react-in-jsx-scope": "off",
-    "import/prefer-default-export": "off"
+    "import/prefer-default-export": "off",
+    "react/destructuring-assignment": "off"
   }
 }
