--- a/front-end/package.json
+++ b/front-end/package.json
@@ -21,7 +21,6 @@
   "dependencies": {
     "@testing-library/jest-dom": "5.16.2",
     "@testing-library/react": "12.1.4",
-    "@testing-library/user-event": "13.5.0",
     "axios": "^0.27.2",
     "date-fns": "^2.28.0",
     "history": "^5.3.0",
@@ -34,6 +33,7 @@
     "web-vitals": "2.1.4"
   },
   "devDependencies": {
+    "@testing-library/user-event": "^14.4.3",
     "eslint-config-trybe-frontend": "1.2.3",
     "react-icons": "^4.4.0",
     "react-router-prop-types": "^1.0.5",
