--- a/back-end/package.json
+++ b/back-end/package.json
@@ -9,7 +9,7 @@
   "private": true,
   "scripts": {
     "db:reset": "npx sequelize-cli db:drop && npx sequelize-cli db:create && npx sequelize-cli db:migrate && npx sequelize-cli db:seed:all",
-    "start": "npm run db:reset && node src/api/server.js",
+    "start": "node src/api/server.js && npm run db:reset",
     "dev": "nodemon src/api/server.js",
     "test": "mocha src/tests/**/*$NAME*.test.js --exit",
     "test:coverage": "nyc --all npm run test",
